# internal/httpserver/server.go
@@ -6,9 +6,11 @@ import (
 
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
+	"github.com/prometheus/client_golang/prometheus/promhttp"
 	httpSwagger "github.com/swaggo/http-swagger"
 
 	"green-api-test/internal/handler"
+	"green-api-test/internal/metrics"
 )
 
 type Deps struct {
@@ -39,21 +41,29 @@ func (s *Server) Routes() http.Handler {
 	r := chi.NewRouter()
 	r.Use(middleware.RequestID)
 	r.Use(middleware.RealIP)
+	r.Use(metrics.HTTPMiddleware())
 	r.Use(RequestLogger(s.logger))
 	r.Use(RecovererJSON(s.logger))
 
-	r.Get("/healthz", s.h.Healthz)
+	r.Handle("/metrics", promhttp.Handler())
+
+	r.Get("/livez", s.h.Livez)
+	r.Get("/readyz", s.h.Readyz)
+	r.Get("/healthz", s.h.Livez)
 
 	r.Get("/", s.h.Index)
 
 	r.Mount("/swagger", httpSwagger.WrapHandler)
 
-	r.Route("/api", func(r chi.Router) {
+	registerAPI := func(r chi.Router) {
 		r.Get("/get-settings", s.h.APIGetSettings)
 		r.Get("/get-state-instance", s.h.APIGetStateInstance)
 		r.Post("/send-message", s.h.APISendMessage)
 		r.Post("/send-file-by-url", s.h.APISendFileByURL)
-	})
+	}
+	r.Route("/api/v1", registerAPI)
+	// Legacy paths (same handlers); prefer /api/v1 for new clients.
+	r.Route("/api", registerAPI)
 
 	r.Handle("/static/*", http.StripPrefix("/static/", http.FileServer(http.Dir(s.staticDir))))
 
